# mia_n_eve

./: .gitignore  mia.config.toml  readme.md  run.sh
brain/: main.py  piper_tts.py  pyproject.toml  test_female.py  test_play.py  test_tts.py  ui_bridge.py
brain/actions/: browser_control.py  code_helper.py  computer_control.py  computer_settings.py  desktop.py  dev_agent.py  file_controller.py  file_processor.py  flight_finder.py  game_updater.py  open_app.py  reminder.py  screen_processor.py  send_message.py  weather_report.py  web_search.py  youtube_video.py
brain/agent/: error_handler.py  executor.py  planner.py  task_queue.py
brain/config/: __init__.py
brain/core/: prompt.txt
brain/memory/: __init__.py  config_manager.py  long_term.json  memory_manager.py
brain/piper_voices/: en_US-lessac-high.onnx
brain/utils/: logger.py
eve/: eve.config.toml  hardware-notes.md
eve/UI_eve/: index.html  package-lock.json  package.json  tsconfig.app.json
eve/UI_eve/src/: App.svelte  app.css
eve/UI_eve/src/lib/components/: AudioDevicePanel.svelte  ChatModule.svelte  Telemetry.svelte  ThreeOrb.svelte  TopAudioBar.svelte
eve/UI_eve/src/lib/stores/: audioStore.ts  eveState.ts  theme.ts
eve/backend_eve/: Cargo.toml  tauri.conf.json
eve/backend_eve/src/: audio.rs  main.rs
eve/backend_eve/src/audio/: capture.rs  device.rs  interruption.rs  mod.rs  playback.rs  rms.rs  stt_client.rs  vad.rs
eve/eve_brain/: pyproject.toml  system_info.py
eve/eve_brain/brain/: __init__.py  server.py
eve/eve_brain/brain/agents/: __init__.py
eve/eve_brain/brain/capabilities/: __init__.py
eve/eve_brain/brain/multimodal/: __init__.py  stt.py
eve/eve_brain/brain/observability/: __init__.py
eve/eve_brain/brain/providers/: __init__.py
eve/eve_brain/brain/runtime_spec/: __init__.py
eve/eve_brain/brain/slots/: __init__.py
eve/proto/: eve.proto
eve/run_checks/: validate_all.py  validate_audio.py  validate_gpu.py  validate_llm.py  validate_stt.py  validate_tts.py
ui/: index.html  package-lock.json  package.json  rewrite_setup.py  tsconfig.app.json
ui/src/: App.svelte  app.css  global.d.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: main.rs
ui/src/lib/components/: FileDropZone.svelte  LoadingScreen.svelte  LogPanel.svelte  MetricBar.svelte  MetricsPanel.svelte  SetupScreen.svelte  StatusText.svelte  ThreeOrb.svelte
ui/src/lib/stores/: miaState.ts  setupStore.ts  theme.ts
