[project]
name = "mia-brain"
version = "0.2.0"
description = "Project mia_n_mia brain — Gemini Live AI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "ollama>=0.4.0",
    "faster-whisper>=1.0.0",

    "RealtimeSTT>=0.1.7",
    "silero-vad",
    "websockets>=12.0",
    "Pillow>=10.2.0",
    "requests",
    "beautifulsoup4",
    "duckduckgo-search",
    "playwright",
    "pyautogui",
    "pyperclip",
    "opencv-python",
    "numpy",
    "mss",
    "psutil>=7.0.0",
    "send2trash",
    "youtube-transcript-api",
    "python-pptx",
    "python-dotenv",
    "setuptools<70",
    "piper-tts"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["actions", "agent", "config", "memory"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
