[package]
name = "mia_n_eve"
version = "0.1.0"
description = "Eve runtime native edge layer"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
cpal = "0.16.0"
rustfft = "6.4.1"
anyhow = "1.0.102"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
