[project]
name = "eve-brain"
version = "0.1.0"
description = "Project mia_n_eve brain orchestration runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
stt = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy",
]
tts = [
    "kokoro",
]
llm = [
    "openai>=1.14.0",
    "google-generativeai>=0.4.0",
]
vision = [
    "Pillow>=10.2.0",
    "pytesseract>=0.3.10",
]
observability = [
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
